--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,57 @@
-<h1>hello</h1>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Data Input Form</title>
+</head>
+<body>
+  <h1>Input Data Form</h1>
+  <form action="{{url_for('predict')}}" method="post">
+    <label for="CRIM">CRIM:</label>
+    <input type="number" step="any" id="CRIM" name="CRIM" required><br><br>
+
+    <label for="ZN">ZN:</label>
+    <input type="number" step="any" id="ZN" name="ZN" required><br><br>
+
+    <label for="INDUS">INDUS:</label>
+    <input type="number" step="any" id="INDUS" name="INDUS" required><br><br>
+
+    <label for="CHAS">CHAS:</label>
+    <input type="number" step="any" id="CHAS" name="CHAS" required><br><br>
+
+    <label for="NOX">NOX:</label>
+    <input type="number" step="any" id="NOX" name="NOX" required><br><br>
+
+    <label for="RM">RM:</label>
+    <input type="number" step="any" id="RM" name="RM" required><br><br>
+
+    <label for="AGE">AGE:</label>
+    <input type="number" step="any" id="AGE" name="AGE" required><br><br>
+
+    <label for="DIS">DIS:</label>
+    <input type="number" step="any" id="DIS" name="DIS" required><br><br>
+
+    <label for="RAD">RAD:</label>
+    <input type="number" step="any" id="RAD" name="RAD" required><br><br>
+
+    <label for="TAX">TAX:</label>
+    <input type="number" step="any" id="TAX" name="TAX" required><br><br>
+
+    <label for="PTRATIO">PTRATIO:</label>
+    <input type="number" step="any" id="PTRATIO" name="PTRATIO" required><br><br>
+
+    <label for="B">B:</label>
+    <input type="number" step="any" id="B" name="B" required><br><br>
+
+    <label for="LSTAT">LSTAT:</label>
+    <input type="number" step="any" id="LSTAT" name="LSTAT" required><br><br>
+
+    <button type="submit">Submit</button>
+  </form>
+
+  <h2>{{predicted_test}}</h2>
+  
+</body>
+</html>
